--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name="prepareias.tychestudios.com.prepareias.AppController"
+        android:name=".AppController"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -22,6 +22,10 @@
         <activity
             android:name=".CurrentAffairSection"
             android:label="@string/title_activity_current_affair_sectiom" >
+        </activity>
+        <activity
+            android:name=".quiz.QuizActivity"
+            android:label="@string/title_activity_quiz" >
         </activity>
     </application>
 
